--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,15 @@
 language: ruby
 rvm:
+  - 1.9.3
+  - 2.0.0
   - 2.1.2
+gemfile:
+  - gemfiles/rspec2.gemfile
+  - gemfiles/rspec3.gemfile
+bundler_args: --jobs=2
+script: bundle exec rspec
+branches:
+  only:
+    - master
+notifications:
+  email: false
